# memento

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cpp
.github/workflows/: CI.yml
Daemon/: CMakeLists.txt  main.cpp  test.cpp
Daemon/daemon/: daemon.cpp  daemon.h
Server/: CMakeLists.txt  main.cpp  server.cpp
Server/searcher_request/include/: searcher_request.h  trie.h
Server/searcher_request/sources/: searcher_request.cpp
Site/: db.sqlite3  manage.py
Site/getmemes/: asgi.py  settings.py  urls.py  wsgi.py
Site/memapp/: admin.py  models.py  views.py
Site/memapp/migrations/: 0001_initial.py
Site/static/css/: my.css
Site/static/js/: my.js  package-lock.json  package.json
Site/templates/: index.html  meme.html
Site/templates/incl/: base.html  logined.html  navbar.html  pagination.html
TgBot/include/tg_bot/: tg_bot_parser.h
TgBot/include/unsorted_img_storage/: img_url_db.h
TgBot/src/: img_url_db.cpp  main.cpp  tg_bot.cpp
daemon/: daemon.cpp  daemon.h
include/tg_bot/: tg_bot_parser.h
include/unsorted_img_storage/: img_url_db.h
lib/: client.h  memInfo.cpp  memInfo.h  server.cpp  server.h  tcp_server.h  udp_server.h
searcher_request/include/: node.h  searcher_request.h  trie.h
searcher_request/sources/: searcher_request.cpp  trie.cpp
src/: img_url_db.cpp  main.cpp  tg_bot.cpp
tests/: main_test.cpp  tests.cpp
